# lkgof

./: LICENSE  README.md  setup.cfg
ipynb/: ex1_results.ipynb  ex2_results.ipynb  ex3_results.ipynb  ex4_results.ipynb  ex5_results.ipynb  ex6-results.ipynb  ex7_results.ipynb
lkgof/: __init__.py  config.py  data.py  density.py  glo.py  goftest.py  kernel.py  log.py  mcmc.py  mctest.py  model.py  numpyro_models.py  plot.py  stein.py  util.py
lkgof/ex/: ex1_vary_n.py  ex2_vary_n_disc.py  ex3_prob_params.py  ex4_vary_mcsizes.py  ex4_vary_n.py  ex5_kernel_params.py  ex6_real_data.py  ex7_prob_params_heat.py  gof_ex1_vary_n.py  run_ex1.sh  run_ex2.sh  run_ex3.sh  run_ex4.sh  run_ex5.sh  run_ex6.sh  run_ex7.sh  trim.py
lkgof/preprocessing/: makedocs.py  overlap.py  preprocess.sh  testdata.py  train.sh  train_lda.py  trim.py  trim.sh
lkgof/test/: test_density.py
