[metadata]
name = lkgof
version = 0.1.0
author = Heishiro Kanagawa
author_email = heishiro.kanagawa@gmail.com
description = A goodness-of-fit test for latent models using Stein discrepancy
description_file = README.md
keywords = machine-learning, statistics, AI, hypothesis-test
url = https://github.com/noukoudashisoup/lkgof
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires = 
    numpy
    scipy
    autograd
    numpyro == 0.2.4
python_requires = ~= 3.6
